// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html converts acceptance.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "HELLO! This is the contract editor.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And below is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "clause",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.ciceromark.Clause",
      "name": "479adbb4-dc55-4d1a-ab12-b6c5e16900c0",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Acceptance of Delivery. ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " will be deemed to have completed its delivery obligations if in ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "receiver",
              "value": "\\"Party B\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "'s opinion, the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " satisfies the Acceptance Criteria, and ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "receiver",
              "value": "\\"Party B\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " notifies ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " in writing that it is accepting the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ".",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Inspection and Notice. ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "receiver",
              "value": "\\"Party B\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " will have ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "businessDays",
              "value": "10",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " Business Days' to inspect and evaluate the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " on the delivery date before notifying ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " that it is either accepting or rejecting the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ".",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Acceptance Criteria. The \\"Acceptance Criteria\\" are the specifications the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "deliverable",
              "value": "\\"Widgets\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " must meet for the ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "shipper",
              "value": "\\"Party A\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " to comply with its requirements and obligations under this agreement, detailed in ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "attachment",
              "value": "\\"Attachment X\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ", attached to this agreement.",
            },
          ],
        },
      ],
      "src": "ap://acceptance-of-delivery@0.12.1#721d1aa0999a5d278653e211ae2a64b75fdd8ca6fa1f34255533c942404c5c1f",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts acceptance.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>HELLO! This is the contract editor.</h1>
<p>And below is a <strong>clause</strong>.</p>
<div class=\\"clause\\" name=\\"479adbb4-dc55-4d1a-ab12-b6c5e16900c0\\" src=\\"ap://acceptance-of-delivery@0.12.1#721d1aa0999a5d278653e211ae2a64b75fdd8ca6fa1f34255533c942404c5c1f\\">
<p>Acceptance of Delivery. <span class=\\"variable\\" name=\\"shipper\\">\\"Party A\\"</span> will be deemed to have completed its delivery obligations if in <span class=\\"variable\\" name=\\"receiver\\">\\"Party B\\"</span>'s opinion, the <span class=\\"variable\\" name=\\"deliverable\\">\\"Widgets\\"</span> satisfies the Acceptance Criteria, and <span class=\\"variable\\" name=\\"receiver\\">\\"Party B\\"</span> notifies <span class=\\"variable\\" name=\\"shipper\\">\\"Party A\\"</span> in writing that it is accepting the <span class=\\"variable\\" name=\\"deliverable\\">\\"Widgets\\"</span>.</p>
<p>Inspection and Notice. <span class=\\"variable\\" name=\\"receiver\\">\\"Party B\\"</span> will have <span class=\\"variable\\" name=\\"businessDays\\">10</span> Business Days' to inspect and evaluate the <span class=\\"variable\\" name=\\"deliverable\\">\\"Widgets\\"</span> on the delivery date before notifying <span class=\\"variable\\" name=\\"shipper\\">\\"Party A\\"</span> that it is either accepting or rejecting the <span class=\\"variable\\" name=\\"deliverable\\">\\"Widgets\\"</span>.</p>
<p>Acceptance Criteria. The \\"Acceptance Criteria\\" are the specifications the <span class=\\"variable\\" name=\\"deliverable\\">\\"Widgets\\"</span> must meet for the <span class=\\"variable\\" name=\\"shipper\\">\\"Party A\\"</span> to comply with its requirements and obligations under this agreement, detailed in <span class=\\"variable\\" name=\\"attachment\\">\\"Attachment X\\"</span>, attached to this agreement.</p>
</div>
</div>
</body>
</html>"
`;

exports[`html converts blockquote.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "A quote.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts blockquote.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is</p>
<blockquote><p>A quote.</p>
</blockquote>
</div>
</body>
</html>"
`;

exports[`html converts clause.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a fixed interest loan to the amount of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "name": "loanAmount",
          "value": "100000.0",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "at the yearly interest rate of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "name": "rate",
          "value": "2.5",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "%",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "with a loan term of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "name": "loanDuration",
          "value": "15",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ",",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "and monthly payments of ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Formula",
          "name": "formula1",
          "value": "667.0",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a fixed interest loan to the amount of 100000.0",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "at the yearly interest rate of 2.5%",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "with a loan term of 15,",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "and monthly payments of 667.0",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.ciceromark.Clause",
      "name": "bar",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "this is",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "multiline ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "rate",
              "value": "2.5",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "content",
            },
          ],
        },
      ],
      "src": "foo",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts clause.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is a fixed interest loan to the amount of <span class=\\"variable\\" name=\\"loanAmount\\">100000.0</span>
at the yearly interest rate of <span class=\\"variable\\" name=\\"rate\\">2.5</span>%
with a loan term of <span class=\\"variable\\" name=\\"loanDuration\\">15</span>,
and monthly payments of <span class=\\"formula\\" name=\\"formula1\\">667.0</span></p>
<p>This is a fixed interest loan to the amount of 100000.0
at the yearly interest rate of 2.5%
with a loan term of 15,
and monthly payments of 667.0</p>
<div class=\\"clause\\" name=\\"bar\\" src=\\"foo\\">
<p>this is
multiline <span class=\\"variable\\" name=\\"rate\\">2.5</span></p>
<p>content</p>
</div>
</div>
</body>
</html>"
`;

exports[`html converts codeblock.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "text": "this is a multiline
code
block.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts codeblock.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<pre class=\\"code_block\\"><code>this is a multiline
code
block.
</pre></code>
</div>
</body>
</html>"
`;

exports[`html converts codeblock-info.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "info": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"https://www.youtube.com/embed/dQw4w9WgXcQ\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
          },
        ],
        "closed": true,
        "content": "",
        "tagName": "video",
      },
      "text": "  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts codeblock-info.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<pre class=\\"code_block\\"><code data-ciceromark=\\"%3Cvideo%20src%3D%22https%3A%2F%2Fwww.youtube.com%2Fembed%2FdQw4w9WgXcQ%22%2F%3E\\">  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
</pre></code>
</div>
</body>
</html>"
`;

exports[`html converts demandforecast.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "On or before the ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.FormattedVariable",
          "format": "YYYY/MM/DD",
          "name": "effectiveDate",
          "value": "2018/04/02",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ", and thereafter on or before the last day of each calendar quarter, the Purchaser ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "name": "purchaser",
          "value": "\\"PETER\\"",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " shall send the Supplier ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "name": "supplier",
          "value": "\\"DAN\\"",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " a Supply Forecast. The Supply Forecast will be a binding commitment on the Purchaser’s behalf to purchase during the first quarter included in each Supply Forecast at least ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.Variable",
          "name": "minimumPercentage",
          "value": "85.0",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "% of the quantity of the listed Product.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts demandforecast.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>On or before the <span class=\\"variable\\" name=\\"effectiveDate\\" format=\\"YYYY/MM/DD\\">2018/04/02</span>, and thereafter on or before the last day of each calendar quarter, the Purchaser <span class=\\"variable\\" name=\\"purchaser\\">\\"PETER\\"</span> shall send the Supplier <span class=\\"variable\\" name=\\"supplier\\">\\"DAN\\"</span> a Supply Forecast. The Supply Forecast will be a binding commitment on the Purchaser’s behalf to purchase during the first quarter included in each Supply Forecast at least <span class=\\"variable\\" name=\\"minimumPercentage\\">85.0</span>% of the quantity of the listed Product.</p>
</div>
</body>
</html>"
`;

exports[`html converts emph.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts emph.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <em>some</em> text.</p>
</div>
</body>
</html>"
`;

exports[`html converts emph-strong.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "some",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts emph-strong.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <em><strong>some</strong></em> text.</p>
</div>
</body>
</html>"
`;

exports[`html converts h1.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts h1.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>Heading One</h1>
</div>
</body>
</html>"
`;

exports[`html converts h2.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Two",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts h2.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h2>Heading Two</h2>
</div>
</body>
</html>"
`;

exports[`html converts h3.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Three",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts h3.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h3>Heading Three</h3>
</div>
</body>
</html>"
`;

exports[`html converts h4.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "4",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Four",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts h4.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h4>Heading Four</h4>
</div>
</body>
</html>"
`;

exports[`html converts h5.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "5",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Five",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts h5.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h5>Heading Five</h5>
</div>
</body>
</html>"
`;

exports[`html converts h6.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "6",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Six",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts h6.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h6>Heading Six</h6>
</div>
</body>
</html>"
`;

exports[`html converts html-inline.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "src = \\"property\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "src",
                "value": "property",
              },
            ],
            "closed": false,
            "content": "",
            "tagName": "custom",
          },
          "text": "<custom src=\\"property\\"></custom>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " property.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts html-inline.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is a <span class=\\"html_inline\\"><custom src=\\"property\\"></custom></span> property.</p>
</div>
</body>
</html>"
`;

exports[`html converts html-mixed.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "src = \\"https://www.youtube.com/embed/dQw4w9WgXcQ\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "src",
                "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
              },
            ],
            "closed": false,
            "content": "",
            "tagName": "video",
          },
          "text": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"></video>",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts html-mixed.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>Heading One</h1>
<p><span class=\\"html_inline\\"><video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"></video></span></p>
<p>done.</p>
</div>
</body>
</html>"
`;

exports[`html converts inline-code.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "inline code",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts inline-code.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <code>inline code</code>.</p>
</div>
</body>
</html>"
`;

exports[`html converts latedelivery.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "HELLO! This is the contract editor.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And below is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "clause",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.ciceromark.Clause",
      "name": "87721b95-7e43-4441-82c7-b4d4db207e6f",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Late Delivery and Penalty.",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "In case of delayed delivery",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Conditional",
              "name": "forceMajeure",
              "value": " except for Force Majeure cases,",
              "whenFalse": "",
              "whenTrue": " except for Force Majeure cases,",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "seller",
              "value": "\\"Dan\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " (the Seller) shall pay to ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "buyer",
              "value": "\\"Steve\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " (the Buyer) for every ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "penaltyDuration",
              "value": "2 days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "of delay penalty amounting to ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "penaltyPercentage",
              "value": "10.5",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "% of the total value of the Equipment",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "whose delivery has been delayed. Any fractional part of a ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "fractionalPart",
              "value": "days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " is to be",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "considered a full ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "fractionalPart",
              "value": "days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ". The total amount of penalty shall not however,",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "exceed ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "capPercentage",
              "value": "55.0",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "% of the total value of the Equipment involved in late delivery.",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "If the delay is more than ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "termination",
              "value": "15 days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ", the Buyer is entitled to terminate this Contract.",
            },
          ],
        },
      ],
      "src": "https://templates.accordproject.org/archives/latedeliveryandpenalty@0.15.0.cta",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts latedelivery.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>HELLO! This is the contract editor.</h1>
<p>And below is a <strong>clause</strong>.</p>
<div class=\\"clause\\" name=\\"87721b95-7e43-4441-82c7-b4d4db207e6f\\" src=\\"https://templates.accordproject.org/archives/latedeliveryandpenalty@0.15.0.cta\\">
<h2>Late Delivery and Penalty.</h2>
<p>In case of delayed delivery<span class=\\"conditional\\" name=\\"forceMajeure\\" whenTrue=\\" except for Force Majeure cases,\\" whenFalse=\\"\\"> except for Force Majeure cases,</span><span class=\\"variable\\" name=\\"seller\\">\\"Dan\\"</span> (the Seller) shall pay to <span class=\\"variable\\" name=\\"buyer\\">\\"Steve\\"</span> (the Buyer) for every <span class=\\"variable\\" name=\\"penaltyDuration\\">2 days</span>
of delay penalty amounting to <span class=\\"variable\\" name=\\"penaltyPercentage\\">10.5</span>% of the total value of the Equipment
whose delivery has been delayed. Any fractional part of a <span class=\\"variable\\" name=\\"fractionalPart\\">days</span> is to be
considered a full <span class=\\"variable\\" name=\\"fractionalPart\\">days</span>. The total amount of penalty shall not however,
exceed <span class=\\"variable\\" name=\\"capPercentage\\">55.0</span>% of the total value of the Equipment involved in late delivery.
If the delay is more than <span class=\\"variable\\" name=\\"termination\\">15 days</span>, the Buyer is entitled to terminate this Contract.</p>
</div>
</div>
</body>
</html>"
`;

exports[`html converts latedelivery-noforce.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "HELLO! This is the contract editor.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And below is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "clause",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.ciceromark.Clause",
      "name": "87721b95-7e43-4441-82c7-b4d4db207e6f",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Heading",
          "level": "2",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "Late Delivery and Penalty.",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "In case of delayed delivery",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Conditional",
              "name": "forceMajeure",
              "value": "",
              "whenFalse": "",
              "whenTrue": " except for Force Majeure cases,",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "seller",
              "value": "\\"Dan\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " (the Seller) shall pay to ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "buyer",
              "value": "\\"Steve\\"",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " (the Buyer) for every ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "penaltyDuration",
              "value": "2 days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "of delay penalty amounting to ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "penaltyPercentage",
              "value": "10.5",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "% of the total value of the Equipment",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "whose delivery has been delayed. Any fractional part of a ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "fractionalPart",
              "value": "days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": " is to be",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "considered a full ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "fractionalPart",
              "value": "days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ". The total amount of penalty shall not however,",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "exceed ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "capPercentage",
              "value": "55.0",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "% of the total value of the Equipment involved in late delivery.",
            },
            Object {
              "$class": "org.accordproject.commonmark.Softbreak",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "If the delay is more than ",
            },
            Object {
              "$class": "org.accordproject.ciceromark.Variable",
              "name": "termination",
              "value": "15 days",
            },
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": ", the Buyer is entitled to terminate this Contract.",
            },
          ],
        },
      ],
      "src": "https://templates.accordproject.org/archives/latedeliveryandpenalty@0.15.0.cta",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts latedelivery-noforce.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<h1>HELLO! This is the contract editor.</h1>
<p>And below is a <strong>clause</strong>.</p>
<div class=\\"clause\\" name=\\"87721b95-7e43-4441-82c7-b4d4db207e6f\\" src=\\"https://templates.accordproject.org/archives/latedeliveryandpenalty@0.15.0.cta\\">
<h2>Late Delivery and Penalty.</h2>
<p>In case of delayed delivery<span class=\\"conditional\\" name=\\"forceMajeure\\" whenTrue=\\" except for Force Majeure cases,\\" whenFalse=\\"\\"></span><span class=\\"variable\\" name=\\"seller\\">\\"Dan\\"</span> (the Seller) shall pay to <span class=\\"variable\\" name=\\"buyer\\">\\"Steve\\"</span> (the Buyer) for every <span class=\\"variable\\" name=\\"penaltyDuration\\">2 days</span>
of delay penalty amounting to <span class=\\"variable\\" name=\\"penaltyPercentage\\">10.5</span>% of the total value of the Equipment
whose delivery has been delayed. Any fractional part of a <span class=\\"variable\\" name=\\"fractionalPart\\">days</span> is to be
considered a full <span class=\\"variable\\" name=\\"fractionalPart\\">days</span>. The total amount of penalty shall not however,
exceed <span class=\\"variable\\" name=\\"capPercentage\\">55.0</span>% of the total value of the Equipment involved in late delivery.
If the delay is more than <span class=\\"variable\\" name=\\"termination\\">15 days</span>, the Buyer is entitled to terminate this Contract.</p>
</div>
</div>
</body>
</html>"
`;

exports[`html converts link.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "a link",
            },
          ],
          "title": "",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts link.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <a href=\\"http://clause.io\\" title=>a link</a>.</p>
</div>
</body>
</html>"
`;

exports[`html converts multiline-html-block.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a custom",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"property\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "property",
          },
        ],
        "closed": false,
        "content": "
contents
",
        "tagName": "custom",
      },
      "text": "<custom src=\\"property\\">
contents
</custom>",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "block.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts multiline-html-block.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is a custom</p>
<pre class=\\"html_block\\"><code><custom src=\\"property\\">
contents
</custom></pre></code>
<p>block.</p>
</div>
</body>
</html>"
`;

exports[`html converts ol.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "false",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts ol.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an ordered list:</p>

<ol delimiter=period start=1 tight=false>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ol><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`html converts ol-tight.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts ol-tight.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an ordered list:</p>

<ol delimiter=period start=1 tight=true>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ol><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`html converts paragraphs.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is first paragraph.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is second paragraph.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts paragraphs.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is first paragraph.</p>
<p>This is second paragraph.</p>
</div>
</body>
</html>"
`;

exports[`html converts strong.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts strong.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is <strong>some</strong> text.</p>
</div>
</body>
</html>"
`;

exports[`html converts text.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is some text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts text.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is some text.</p>
</div>
</body>
</html>"
`;

exports[`html converts thematicbreak.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.ThematicBreak",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "A footer.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts thematicbreak.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is</p>

<hr>
<p>A footer.</p>
</div>
</body>
</html>"
`;

exports[`html converts ul.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "false",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts ul.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an unordered list:</p>

<ul tight=false>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ul><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`html converts ul-tight.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "true",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts ul-tight.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is an unordered list:</p>

<ul tight=true>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ul><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`html converts unwrapped <li> to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Hello",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Item",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "list item",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "World.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts unwrapped <li> to html 2`] = `
"Hello
-  list item

World."
`;

exports[`html converts variable-enum.md to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a ",
        },
        Object {
          "$class": "org.accordproject.ciceromark.EnumVariable",
          "enumValues": Array [
            "ABC",
            "DEF",
          ],
          "name": "currency",
          "value": "ABC",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " property.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`html converts variable-enum.md to html 2`] = `
"<html>
<body>
<div class=\\"document\\">
<p>This is a <span class=\\"variable\\" name=\\"currency\\" enumValues=\\"%5B%22ABC%22%2C%22DEF%22%5D\\">ABC</span> property.</p>
</div>
</body>
</html>"
`;
